fix overflowing input on process manager
fixes #1461

--- a/client/less/ui/tables.less
+++ b/client/less/ui/tables.less
@@ -56,7 +56,7 @@
             }
 
             &.skinny {
-              width: 9rem;
+              width: 7rem;
             }
           }
         }
